--- a/html/Animals_and_Quiz/MandarinFish.html
+++ b/html/Animals_and_Quiz/MandarinFish.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MandarinFish</title>
-    <link rel="stylesheet" href="../../css/Animals_and_Quiz/SeaAnimals.css" />
-    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png" />
+    <link rel="stylesheet" href="../../css/Animals_and_Quiz/SeaAnimals.css">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="navList">
-                <img class="navLogoImage" src="../../image/logo.png" />
+    <header> <!-- Header section with navigation bar -->
+        <nav> <!-- Navigation bar -->
+            <ul class="navList"> <!-- List of navigation links -->
+                <li><img class="navLogoImage" src="../../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="../index.html">Home</a></li>
                 <li><a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a></li>
                 <li><a class="NavText" href="EarthLife.html">Earth life</a></li>
@@ -21,25 +21,26 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container">
-            <h1>The mandarin fish</h1>
+    <main> <!-- Main content area -->
+        <div class="container"> <!-- Container for the content -->
+            <h1>The mandarin fish</h1> <!-- Main title of the page -->
 
-            <div class="video-container">
-                <video controls width="100%">
-                    <source src="../../videos/Mandarin Dragonet.mp4" type="video/mp4" alt="Mandarin fish video">
+            <div class="video-container"> <!-- Container for the video -->
+                <video controls style="width: 100%;"> <!-- Video player with controls -->
+                    <source src="../../videos/Mandarin_Dragonet.mp4" type="video/mp4"> <!-- Source of the video -->
                 </video>
+
             </div>
 
-            <div class="audio-container">
+            <div class="audio-container"> <!-- Container for the audio -->
                 <h2>What sound does the mandarin fish make ?</h2>
                 <audio controls>
-                    <source src="../../audios/Mandarin_Dragonet.mp3" type="audio/mpeg" alt="Mandarin fish audio">
+                    <source src="../../audios/Mandarin_Dragonet.mp3" type="audio/mpeg">
                 </audio>
             </div>
 
-            <div class="articles">
-                <div class="article">
+            <div class="articles"> <!-- Container for articles -->
+                <div class="article"> <!-- First article -->
                     <h2>The mandarin fish: A vibrant jewel of the reef</h2>
                     <p>
                         The mandarin fish (Synchiropus splendidus) is a small, brightly colored marine species found in
@@ -52,13 +53,13 @@
                         <li><strong>Physical appearance:</strong>
                             <p>
                                 Mandarin fish are best known for their striking appearance. They display a vivid palette
-                                of
-                                electric blues, oranges, and greens arranged in swirling patterns across their small,
+                                of electric blues, oranges, and greens arranged in swirling patterns across their small,
                                 elongated bodies, which typically measure only 6 to 8 centimeters (2.4 to 3.1 inches) in
                                 length. Unlike most fish, their coloration comes not from pigments but from cellular
                                 structures that reflect light, a trait shared with few other species.
+
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Diet and behavior:</strong>
                             <p>
@@ -69,7 +70,7 @@
                                 excellent camouflage to avoid predators. They use their pelvic fins like feet to "walk"
                                 across the seafloor as they forage.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Reproduction and social life:</strong>
                             <p>
@@ -80,7 +81,7 @@
                                 Outside
                                 of breeding, mandarin fish are often solitary or found in small groups.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Conservation status:</strong>
                             <p>
@@ -90,7 +91,7 @@
                                 highly sought after by hobbyists, which can put local populations at risk if not sourced
                                 responsibly.
                             </p>
-                        </li><br>
+                        </li>
                     </ul>
 
 
@@ -101,14 +102,15 @@
                         Conservation efforts are essential to protect their reef habitats and ensure their survival for
                         generations to come.
                     </p>
+
                 </div>
 
-                <div class="article">
+                <div class="article"> <!-- Second article -->
                     <h2>Protecting the mandarin fish: How can we help</h2>
                     <p>
                         Though not yet endangered, the mandarin fish's future depends on our ability to protect coral
                         reef ecosystems and promote sustainable practices. Here's how we can support their survival:
-                    </p><br>
+                    </p>
 
                     <ol>
                         <li><strong>Protect coral reefs:</strong>
@@ -119,7 +121,7 @@
                                 conservation
                                 areas and organizations that work to restore reef habitats is vital.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Choose sustainable aquariums:</strong>
@@ -129,7 +131,7 @@
                                 or
                                 unregulated trade in reef fish.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Reduce your carbon footprint:</strong>
@@ -139,7 +141,7 @@
                                 Reducing your carbon emissions by using energy-efficient products, supporting renewable
                                 energy, and cutting unnecessary travel helps protect marine life.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Avoid harmful chemicals:</strong>
@@ -148,7 +150,7 @@
                                 and
                                 avoid dumping pollutants down the drain, which may end up in marine environments.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Raise awareness:</strong>
@@ -158,7 +160,7 @@
                                 especially with younger generations, can help build support for protecting the rich
                                 biodiversity of our oceans.
                             </p>
-                        </li><br>
+                        </li>
                     </ol>
                     <strong>Conclusion:</strong>
                     <p>
@@ -170,6 +172,8 @@
                 </div>
             </div>
         </div>
+
+        <button id="backToTopButton">↑</button>
     </main>
 
 
@@ -186,9 +190,11 @@
             <a class="NavText" href="../about.html">About</a>
         </div>
         <div class="footer-right">
-            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo" />
+            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
+
+    <script src="../js/function.js"></script>
 
 </body>
 
