corrected w3c for turtle and pandido

--- a/html/Animals_and_Quiz/pandido.html
+++ b/html/Animals_and_Quiz/pandido.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Everyday life</title>
-    <link rel="stylesheet" href="../../css/Animals_and_Quiz/EarthAnimals.css" />
-    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pandido</title>
+    <link rel="stylesheet" href="../../css/Animals_and_Quiz/EarthAnimals.css">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="navList">
-                <img class="navLogoImage" src="../../image/logo.png" />
+    <header> <!-- Header section with navigation bar -->
+        <nav> <!-- Navigation bar -->
+            <ul class="navList"> <!-- List of navigation links -->
+                <li><img class="navLogoImage" src="../../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="../index.html">Home</a></li>
                 <li><a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a></li>
                 <li><a class="NavText" href="EarthLife.html">Earth life</a></li>
@@ -21,36 +21,36 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container">
-            <h1>The red panda</h1>
+    <main> <!-- Main content area -->
+        <div class="container"> <!-- Container for the content -->
+            <h1>The red panda</h1> <!-- Main title of the page -->
 
-            <div class="video-container">
-                <video controls width="100%">
-                    <source src="../../videos/red_panda.mp4" type="video/mp4" alt="Red panda video">
+            <div class="video-container"> <!-- Container for the video -->
+                <video controls style="width: 100%;"> <!-- Video player with controls -->
+                    <source src="../../videos/red_panda.mp4" type="video/mp4"> <!-- Source of the video -->
                 </video>
+
             </div>
 
-            <div class="audio-container">
+            <div class="audio-container"> <!-- Container for the audio -->
                 <h2>What sound does the red panda make ?</h2>
                 <audio controls>
-                    <source src="../../audios/Voice of Red Panda.mp3" type="audio/mpeg" alt="Red panda audio">
+                    <source src="../../audios/Voice_of_Red_Panda.mp3" type="audio/mpeg">
                 </audio>
             </div>
 
-            <div class="articles">
-                <div class="article">
+            <div class="articles"> <!-- Container for articles -->
+                <div class="article"> <!-- First article -->
                     <h2>The red panda: A unique and endearing creature</h2>
                     <p>
                         The red panda (Ailurus fulgens) is a small, tree-dwelling mammal native to the eastern Himalayas
                         and southwestern China. Despite its name, the red panda is not closely related to the giant
                         panda. In fact, it belongs to its own unique family, Ailuridae, making it a distinct species
-                        with fascinating characteristics.<br>
+                        with fascinating characteristics.
                     </p><br>
 
                     <ul>
-                        <li>
-                            <strong>Physical appearance:</strong>
+                        <li><strong>Physical appearance:</strong>
                             <p>
                                 Red pandas are easily recognizable by their rust-colored fur, bushy ringed tails, and
                                 masked
@@ -62,8 +62,9 @@
                                 thick fur not only gives them a charming look but also insulates them against cold
                                 mountain
                                 temperatures.
+
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Diet and behavior:</strong>
                             <p>
@@ -75,7 +76,7 @@
                                 move
                                 among trees where they spend most of their time.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Activity and social life:</strong>
                             <p>
@@ -85,17 +86,17 @@
                                 and dusk. They communicate through body language, scent markings, and soft
                                 vocalizations.
                             </p>
-                        </li><br>
+                        </li>
 
-                        <li>
-                            <strong>Conservation status:</strong>
+                        <li><strong>Conservation status:</strong>
                             <p>
                                 The red panda is classified as Endangered by the IUCN due to habitat loss, poaching, and
                                 fragmentation. It is estimated that fewer than 10,000 mature individuals remain in the
                                 wild.
                             </p>
-                        </li><br>
+                        </li>
                     </ul>
+
 
                     <strong>Conclusion:</strong>
                     <p>
@@ -103,20 +104,20 @@
                         Conservation efforts continue to protect their habitats and ensure their survival for
                         generations to come.
                     </p>
+
                 </div>
 
-                <div class="article">
+                <div class="article"> <!-- Second article -->
                     <h2>Protecting the red panda: How can we help</h2>
                     <p>
                         The red panda, a charming and rare mammal native to the Himalayas and parts of China, is
                         currently listed as Endangered. With fewer than 10,000 individuals left in the wild, urgent
                         action is needed to protect this unique species from extinction. Fortunately, there are several
                         ways we can help.
-                    </p><br>
+                    </p>
 
                     <ol>
-                        <li>
-                            <strong>Preserve their habitat:</strong>
+                        <li><strong>Preserve their habitat:</strong>
                             <p>
                                 Red pandas rely on dense forests with plenty of bamboo to survive. One of the biggest
                                 threats
@@ -126,7 +127,7 @@
                                 pandas
                                 need.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Support conservation organizations:</strong>
@@ -138,7 +139,7 @@
                                 or
                                 volunteering with these organizations can have a real impact.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Raise awareness:</strong>
@@ -148,7 +149,7 @@
                                 Sharing information on social media, hosting awareness events, or supporting educational
                                 programs can help more people care about the cause.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Choose sustainable products:</strong>
@@ -160,7 +161,7 @@
                                 like
                                 FSC (Forest Stewardship Council) when shopping.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Responsible ecotourism:</strong>
@@ -171,7 +172,7 @@
                                 while
                                 encouraging the protection of wildlife.
                             </p>
-                        </li><br>
+                        </li>
                     </ol>
                     <strong>Conclusion:</strong>
                     <p>
@@ -198,9 +199,11 @@
             <a class="NavText" href="../about.html">About</a>
         </div>
         <div class="footer-right">
-            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo" />
+            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
+
+    <script src="../js/function.js"></script>
 
 </body>
 
