--- a/html/Animals_and_Quiz/turtle.html
+++ b/html/Animals_and_Quiz/turtle.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Everyday life</title>
-    <link rel="stylesheet" href="../../css/Animals_and_Quiz/EarthAnimals.css" />
-    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Turtle</title>
+    <link rel="stylesheet" href="../../css/Animals_and_Quiz/EarthAnimals.css">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="navList">
-                <img class="navLogoImage" src="../../image/logo.png" />
+    <header> <!-- Header section with navigation bar -->
+        <nav> <!-- Navigation bar -->
+            <ul class="navList"> <!-- List of navigation links -->
+                <li><img class="navLogoImage" src="../../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="../index.html">Home</a></li>
                 <li><a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a></li>
                 <li><a class="NavText" href="EarthLife.html">Earth life</a></li>
@@ -21,34 +21,32 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container">
-            <h1>Roti Island snake-necked turtle </h1>
+    <main> <!-- Main content area -->
+        <div class="container"> <!-- Container for the content -->
+            <h1>Roti Island snake-necked turtle</h1> <!-- Main title of the page -->
 
-            <div class="video-container">
-                <video controls width="100%">
-                    <source src="../../videos/turtle.mp4" type="video/mp4" alt="Roti Island snake-necked turtle video">
+            <div class="video-container"> <!-- Container for the video -->
+                <video controls style="width: 100%;"> <!-- Video player with controls -->
+                    <source src="../../videos/turtle.mp4" type="video/mp4"> <!-- Source of the video -->
                 </video>
+
             </div>
 
-            <div class="audio-container">
+            <div class="audio-container"> <!-- Container for the audio -->
                 <h2>What sound does the Roti Island snake-necked turtle make ?</h2>
-
                 <audio controls>
-                    <source src="../../audios/Giant Snake-necked Turtle.mp3" type="audio/mpeg"
-                        alt="Roti Island snake-necked turtle audio">
+                    <source src="../../audios/Giant_Snake-necked_Turtle.mp3" type="audio/mpeg">
                 </audio>
             </div>
 
-            <div class="articles">
-                <div class="article">
-                    <h2> The Roti Island Snake-Necked Turtle: A Rare and Remarkable Reptile</h2>
+            <div class="articles"> <!-- Container for articles -->
+                <div class="article"> <!-- First article -->
+                    <h2>The Roti Island Snake-Necked Turtle: A Rare and Remarkable Reptile</h2>
                     <p>
                         The Roti Island snake-necked turtle (Chelodina mccordi) is one of the most unique and critically
                         endangered turtles in the world. Native only to Roti Island in Indonesia, this freshwater turtle
                         is known for its extraordinarily long neck, which can be as long as its shell.
                     </p><br>
-
 
                     <ul>
                         <li><strong>Physical appearance:</strong>
@@ -59,9 +57,9 @@
                                 prey with lightning speed. When threatened, it bends its neck sideways under its shell
                                 instead of
                                 pulling it straight back like most turtles.
-                            </p>
 
-                        </li><br>
+                            </p>
+                        </li>
 
                         <li><strong>Habitat and behavior:</strong>
                             <p>
@@ -72,10 +70,9 @@
                                 not a strong swimmer and prefers calm, shallow waters where it can walk along the
                                 bottom.
                             </p>
-                        </li><br>
+                        </li>
 
-                        <li>
-                            <strong>Conservation status:</strong>
+                        <li><strong>Conservation status:</strong>
                             <p>
                                 This species is Critically Endangered, with its population drastically declining due to
                                 illegal
@@ -83,8 +80,9 @@
                                 over-collected
                                 for sale in international markets.
                             </p>
-                        </li><br>
+                        </li>
                     </ul>
+
 
                     <strong>Conclusion:</strong>
                     <p>
@@ -92,19 +90,19 @@
                         its ecosystem. Its rarity makes it all the more important to protect and preserve for future
                         generations.
                     </p>
+
                 </div>
 
-                <div class="article">
-                    <h2> Saving the Roti Island Snake-Necked Turtle: What We Can Do</h2>
+                <div class="article"> <!-- Second article -->
+                    <h2>Saving the Roti Island Snake-Necked Turtle: What We Can Do</h2>
                     <p>
                         The Roti Island snake-necked turtle is in danger of disappearing forever. With only a few known
                         wild populations left, urgent action is needed to protect this rare species. Here is how we can
                         help:
-                    </p><br>
+                    </p>
 
                     <ol>
-                        <li>
-                            <strong>Stop illegal wildlife trade:</strong>
+                        <li><strong>Stop illegal wildlife trade:</strong>
                             <p>
                                 One of the main threats to this turtle is its capture for the exotic pet market.
                                 Supporting
@@ -113,8 +111,7 @@
                                 reduce
                                 demand and protect wild populations.
                             </p>
-
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Protect natural habitats:</strong>
@@ -126,20 +123,18 @@
                                 pollution,
                                 and development.
                             </p>
-
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Support conservation programs:</strong>
                             <p>
-
                                 Organizations are working to breed the turtles in captivity, monitor wild populations,
                                 and
                                 restore natural habitats. Donating to or raising awareness of these programs can
                                 directly
                                 support their efforts.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Educate and advocate:</strong>
@@ -150,25 +145,25 @@
                                 its
                                 survival.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Encourage sustainable development:</strong>
                             <p>
-
                                 Helping communities on Roti Island find ways to earn a living that do not harm the
                                 environment, like eco-tourism or sustainable agriculture can protect turtle habitats in
                                 the
                                 long
                                 run.
                             </p>
-                        </li><br>
+                        </li>
                     </ol>
-
                     <strong>Conclusion:</strong>
-                    <p>The Roti Island snake-necked turtle is a one-of-a-kind species worth saving. With global
+                    <p>
+                        The Roti Island snake-necked turtle is a one-of-a-kind species worth saving. With global
                         cooperation and community involvement, we can help ensure this fascinating turtle continues to
-                        exist in the wild.</p>
+                        exist in the wild.
+                    </p>
                 </div>
             </div>
         </div>
@@ -188,9 +183,11 @@
             <a class="NavText" href="../about.html">About</a>
         </div>
         <div class="footer-right">
-            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo" />
+            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
+
+    <script src="../js/function.js"></script>
 
 </body>
 
