--- a/html/index.html
+++ b/html/index.html
@@ -99,7 +99,7 @@
                         </div>
 
                         <div id="pin_container_4" class="pin_container"> <!-- Pin container for the fourth pin -->
-                            <a href="../html/index.html">
+                            <a href="../html/Animals_and_Quiz/turtle.html">
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
 
