--- a/html/about.html
+++ b/html/about.html
@@ -51,7 +51,7 @@
                     <img id="killian" src="../image/Killian.jpg" alt="Killian KOULOURATH">
                     <h3 id="killian_h3">Killian KOULOURATH</h3>
                     <p><strong>Role:</strong> I was in charge of making the home page which was kind of difficult. I
-                        also made the the pages for the Sea life animal</p>
+                        also made the pages for the Sea life animal</p>
                     <p class="bio">As a second-year student at EFREI, I enjoy combining creativity with real-world
                         impact. That's why I really enjoyed working on this project — it gave me the freedom to design
                         something visually engaging while learning more about endangered animals and raising awareness
